--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,12 @@ dependencies {
     //recycleview
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    //picasso library
+
+
+
+// https://mvnrepository.com/artifact/com.squareup.picasso/picasso
+    implementation group: 'com.squareup.picasso', name: 'picasso', version: '2.5.2'
+
 }
